# Recognition

./: .claudeignore  .dockerignore  .env.example  .gitignore  .railwayignore  AGENT.md  AGENTS.md  ANNOTATION_INTERFACE_ANALYSIS.md  CLAUDE.md  EDGE_DEPLOYMENT_PLAN.md  FRONTEND_EXPLORATION_REPORT.md  QUALITY_MODULE_CHANGELOG.md  README.md  THIRD_PARTY_NOTICES.txt  constitution.md  docker-compose.dev.yml  frontend-railway.toml  nixpacks-disabled.toml  nixpacks.toml  railway.toml  railway_start.py  requirements.txt  ruff.toml  worker-railway.toml
services/api/: .coverage  AGENT.md  Dockerfile  Dockerfile.worker  RATE_LIMITING_PLAN.md  SDD.md  conftest.py  pyproject.toml  railway.toml  requirements-dev.txt  requirements.txt  ruff.toml
services/api/app/: AGENTS.md  __init__.py  config.py  extensions.py
services/api/app/core/: auth.py  auto_version.py  device_auth.py  edge_offline.py  exceptions.py  logging_config.py  middleware.py  rate_limiting.py  responses.py  socket_bridge.py  tenant.py  validators.py
services/api/migrations/: 012_camera_fields.sql
services/api/scripts/: index_docs.py  migrate_public_to_rvb.py  rtsp_simulator.py
services/api/tests/: AGENTS.md  conftest.py  test_demo_videos.py
services/api/tests/admin/: test_test_console.py
services/api/tests/integration/: conftest.py  test_api_routes.py  test_authenticated_routes.py  test_branding_routes.py  test_camera_create_search_path.py  test_counting_plate_routes.py  test_edge_admin_sites.py  test_edge_enrollment.py  test_edge_enrollment_token_mgmt.py  test_edge_fleet_overview.py  test_edge_heartbeat.py  test_edge_heartbeat_summary.py  test_edge_heartbeats_history.py  test_edge_list_devices.py  test_edge_revoke_device.py  test_edge_site_detail_update.py  test_edge_sites_health.py  test_events_routes.py  test_health.py  test_model_rollout_api.py  test_probe_handler.py  test_retention_routes.py  test_rvb_operation_types.py  test_scenario_api.py
services/api/tests/quality/: test_gate_repository.py  test_state_machine.py  test_wiser_integration.py
services/api/worker_onpremise/: Dockerfile  heartbeat.py
shared/python/recognition_shared/: __init__.py  device.py  edge_site.py  enums.py  heartbeat.py  pyproject.toml
(+1315 files in other folders)
