[project]
name = "epi-monitor-backend"
version = "2.0.0"
description = "EPI Monitor V2 — Backend API + Worker"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "S",    # flake8-bandit (security)
]
ignore = [
    "S101",  # assert usado em testes
    "S104",  # bind 0.0.0.0 intencional (container)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.black]
target-version = ["py311"]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Meta aspiracional: 60%. CI usa baseline atual via workflow
# (.github/workflows/ci.yml). Subir gradualmente: 30 → 40 → 50 → 60.
addopts = [
    "-v",
    "--strict-markers",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-fail-under=60",  # overridden by CI workflow (30 com margem de 1 ponto)
]

[tool.coverage.run]
omit = [
    "app/infrastructure/queue/tasks/*",
    "app/infrastructure/queue/celery_app.py",
    "app/infrastructure/database/migrations/*",
    "app/domain/models/*",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true
